syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

// Defines the import path that should be used to import the generated package
// and the package name
option go_package = "github.com/iamrajiv/helloworld-grpc-gateway/proto;auth";

// Here is the overall greeting service definition where we define all our endpoints
service Auth {
  // Sends a greeting
  rpc AuthHandler (AuthRequest) returns (HelloNewReply) {
    option (google.api.http) = {
      post: "/v1/example/auth"
      body: "*"
    };
  }
}

// The request message containing the user's name
message AuthRequest {
  string auth = 1;
}

// The response message containing the greetings
message HelloNewReply {
  string message = 1;
}
